--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,12 @@
 services:
+  spring-micro:
+    build: 
+      context: .
+      dockerfile: Dockerfile.dev
+    ports:
+      - "8080:8080"
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./target/classes
+          target: /app/target/classes
