--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY pom.xml .
 RUN mvn dependency:go-offline
 COPY src ./src
+ENV MAVEN_OPTS="-Dspring-boot.run.fork=false"
 CMD ["mvn", "spring-boot:run"]
