--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,19 @@
 services:
   api:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
       - "8080:8080"
+    depends_on:
+      - db
     develop:
       watch:
         - action: sync+restart
-          path: ./target/classes
-          target: /app/target/classes
+          path: ./src
+          target: /app/src
+          ignore:
+            - target/
   db:
     container_name: postgres
     image: postgres
@@ -18,3 +22,4 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
