--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+# Envers logs
+spring.jpa.properties.hibernate.envers.audit_table_prefix=audit_
+spring.jpa.properties.hibernate.envers.audit_table_suffix=_history
