--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-envers</artifactId>
-            <version>6.6.4.Final</version>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-spring-boot-starter-sql</artifactId>
+            <version>7.6.2</version>
         </dependency>
         
         <dependency>
